--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,15 +21,15 @@ if (NOT raylib_FOUND)
         FetchContent_Populate(raylib)
         set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
         add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
-    endif()
-endif()
+    endif ()
+endif ()
 
 # raylib-cpp
 find_package(raylib_cpp QUIET)
 if (NOT raylib_cpp_FOUND)
     if (NOT DEFINED RAYLIB_CPP_VERSION)
         set(RAYLIB_CPP_VERSION v5.0.2)
-    endif()
+    endif ()
     include(FetchContent)
     FetchContent_Declare(
             raylib_cpp
@@ -37,14 +37,16 @@ if (NOT raylib_cpp_FOUND)
             GIT_TAG ${RAYLIB_CPP_VERSION}
     )
     FetchContent_MakeAvailable(raylib_cpp)
-endif()
+endif ()
 
 # Our Project
 add_executable(${PROJECT_NAME})
+target_include_directories(${PROJECT_NAME} PRIVATE include)
+include(external/CMakeLists.txt)
 add_subdirectory(src)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY $<TARGET_FILE_DIR:${PROJECT_NAME}>)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
@@ -55,13 +57,13 @@ if ("${PLATFORM}" STREQUAL "Web")
     #    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/src/resources $<TARGET_FILE_DIR:${PROJECT_NAME}>/../resources
     #)
     #DEPENDS ${PROJECT_NAME}
-else()
+else ()
     #add_custom_command(
     #    TARGET ${PROJECT_NAME} POST_BUILD
     #    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/src/resources $<TARGET_FILE_DIR:${PROJECT_NAME}>/resources
     #)
     #DEPENDS ${PROJECT_NAME}
-endif()
+endif ()
 
 #set(raylib_VERBOSE 1)
 target_link_libraries(${PROJECT_NAME} raylib)
@@ -71,11 +73,11 @@ target_link_libraries(${PROJECT_NAME} raylib_cpp)
 if ("${PLATFORM}" STREQUAL "Web")
     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
     target_link_options(${PROJECT_NAME} PUBLIC -sUSE_GLFW=3 PUBLIC --preload-file resources)
-endif()
+endif ()
 
 # Checks if OSX and links appropriate frameworks (Only required on MacOS)
 if (APPLE)
     target_link_libraries(${PROJECT_NAME} "-framework IOKit")
     target_link_libraries(${PROJECT_NAME} "-framework Cocoa")
     target_link_libraries(${PROJECT_NAME} "-framework OpenGL")
-endif()
+endif ()
