--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,9 @@ project(Boom
 
 set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 
-list(APPEND CMAKE_MODULE_PATH cmake)
-
 find_package(Vulkan REQUIRED)
-find_package(GLM REQUIRED)
-find_package(GLFW REQUIRED)
+find_package(glm REQUIRED)
+find_package(glfw3 REQUIRED)
 
 add_executable(${PROJECT_NAME})
 add_subdirectory(src)
@@ -38,7 +36,7 @@ else ()
     )
 endif ()
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan)
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw glm::glm Vulkan::Vulkan)
 
 # Web Configurations
 if ("${PLATFORM}" STREQUAL "Web")
